<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Boardly</string>
    <string name="create_account_text">Create account</string>
    <string name="sign_in_with_google_text">Log in using Gmail</string>
    <string name="sign_in_with_facebook_text">Log in using Facebook</string>
    <string name="sign_in_text">Log in</string>
    <string name="password_hint_login">Password</string>
    <string name="email_hint">Email</string>
    <string name="password_hint_sign_up">Password (at least 6 characters)</string>
    <string name="no_internet_error">You are not connected to the internet</string>
    <string name="generic_error">Something went wrong :(</string>
    <string name="wrong_password_error">This password is incorrect</string>
    <string name="user_not_found_error">This user does not exist</string>
    <string name="invalid_email_error">This email is incorrect</string>
    <string name="already_used_email_error">This email is already used</string>
    <string name="login_error_text">Something went wrong :(</string>
    <string name="your_name_hint">Your name</string>
    <string name="your_current_rating">Your current rating:</string>
    <string name="save_changes">Save changes</string>
    <string name="your_profile_text">Your profile</string>
    <string name="sign_out_text">Log out</string>
    <string name="drawer_opened">Navigation opened</string>
    <string name="drawer_closed">Navigation closed</string>
    <string name="events_text">Events</string>
    <string name="event_name_hint">Event name</string>
    <string name="number_of_players_hint">Max number of players</string>
    <string name="pick_game_text">Pick a game</string>
    <string name="pick_game_text_optional">Pick a game (optional)</string>
    <string name="game_text_placeholder">No game picked</string>
    <string name="place_text_placeholder">No place picked</string>
    <string name="pick_place_text">Pick a place</string>
    <string name="level_text_placeholder">Pick a level</string>
    <string name="date_text_placeholder">No date picked</string>
    <string name="pick_date_text">Pick a date (optional)</string>
    <string name="add_new_event">Add event</string>
    <string name="search_game_hint">Search for games</string>
    <string name="search_place_hint">Search for places</string>
    <string name="search_title">Search</string>
    <string name="gps_not_available">Google Play Services are unavailable</string>
    <string name="gps_update_needed">Update or turn on Google Play Services</string>
    <string name="location_denied_text">Click filtering icon at the top right corner and select your location to see events nearby.</string>
    <string name="description_hint">Event description (optional)</string>
    <string name="no_search_results_text">No results</string>
    <string name="be_more_specific_error_text">There are too many results for \'%1$s\'. Be more specific.</string>
    <string name="dialog_ok">Accept</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="beginner_level">Beginner</string>
    <string name="intermediate_level">Intermediate</string>
    <string name="advanced_level">Advanced</string>
    <string name="everything_went_ok">Everything went well!</string>
    <string name="join_event">Join</string>
    <string name="empty"> </string>
    <string name="no_event_found_text">No events found. Try changing your filter criteria.</string>
    <string name="looking_for_events_text">Looking for events…</string>
    <string name="filter_text">Filter events</string>
    <string name="max_distance_text">Maximum event distance: %1$d km</string>
    <string name="apply_filter_text">Apply</string>
    <string name="delete_game_text">Delete game</string>
    <string name="description_text">Description</string>
    <string name="close_dialog">Close</string>
    <string name="enable_location_permission">Click filtering icon at the top right corner and select your location to see events nearby.</string>
    <string name="date_to_be_added">To be added</string>
    <string name="my_events_text">Your events</string>
    <string name="created_text">CREATED</string>
    <string name="pending_text">PENDING</string>
    <string name="accepted_text">ACCEPTED</string>
    <string name="hello_dialog_title">Join</string>
    <string name="hello_hint_text">Write a short note about yourself (e. g. what\'s your level of experience with the game or what do you expect from the event). It\'ll encourage organizer to pick you!</string>
    <string name="hello_dialog_positive_text">Join</string>
    <string name="hello_dialog_negative_text">Cancel</string>
    <string name="accepted_players_text">Accepted players:</string>
    <string name="no_players_text">There is nobody here for now</string>
    <string name="pending_players_text">Pending players:</string>
    <string name="kick_text">Kick</string>
    <string name="accept_text">Accept</string>
    <string name="rate_text">Rate</string>
    <string name="rate_dialog_title">Rate this player</string>
    <string name="rate_dialog_positive_text">Rate</string>
    <string name="rate_dialog_negative_text">Cancel</string>
    <string name="chat_message_hint">Aa</string>
    <string name="you_were_kicked_text">You were kicked from this event</string>
    <string name="facebook_app_id">2102145790001665</string>
    <string name="fb_login_protocol_scheme">fb2102145790001665</string>
    <string name="places_api_key">AIzaSyDMVFtuVTLC2LrPfDLchpPDRyS82fjQSog</string>
    <string name="location_processing_text">Setting your location…</string>
    <string name="show_on_map_text">Show on map</string>
    <string name="open_event_screen_text">Enter event</string>
    <string name="delete_event">Delete the event</string>
    <string name="edit_event">Edit the event</string>
    <string name="delete_event_title">Delete the event</string>
    <string name="are_you_sure_to_delete">Are you sure you want to delete this event?</string>
    <string name="new_chat_message_channel">New chat message</string>
    <string name="new_join_request_channel">New join request</string>
    <string name="accepted_request_channel">Join request accepted</string>
    <string name="logout_connection_prompt">Turn on the internet to log out</string>
    <string name="chat_message_notification_title">Event %1$s</string>
    <string name="chat_message_notification_body">New message from %1$s.</string>
    <string name="join_request_notification_title">Event %1$s</string>
    <string name="join_request_notification_body">New join request.</string>
    <string name="accepted_request_notification_title">Event %1$s</string>
    <string name="accepted_request_notification_body">You were accepted. Say hello to other players.</string>
    <string name="invite_friends">Invite friends</string>
    <string name="chooser_title_text">Pick</string>
    <string name="boardly_invite_text">Hi! I want to invite you to Boardly - mobile app, which connects local board game players in a simple and fast way :) \n https://play.google.com/store/apps/details?id=com.boardly&amp;hl=en</string>
    <string name="location_text_placeholder">No place picked</string>
    <string name="use_current_location">Use your current location</string>
    <string name="current_location_info">Current location</string>
    <string name="chat_incentive_text">Be the first one to write a chat message. Say hello and start meeting other board game players!</string>
    <string name="no_created_events_found_text">No created events yet</string>
    <string name="no_accepted_events_found_text">No accepted events yet</string>
    <string name="no_pending_events_found_text">No pending events yet</string>
    <string name="no_interesting_events_found_text">No events that interest you yet</string>
    <string name="you_left_event">You left the event</string>
    <string name="leave_event">Leave the event</string>
    <string name="leave_cancel">Cancel</string>
    <string name="are_you_sure_to_leave">Are you sure you want to leave this event?</string>
    <string name="leave_event_title">Leave the event</string>
    <string name="toggle_chat_notifications_text">New chat message notifications</string>
    <string name="calendar_event_title">Boardly: event %1$s</string>
    <string name="calendar_event_description">Together, you\'ll be playing in %1$s</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="join_request_sent">Join request sent</string>
    <string name="notify_text">Event notifications</string>
    <string name="delete_place_text">Delete place</string>
    <string name="apply_notify_settings_text">Apply</string>
    <string name="delete_notifications_text">Delete notifications</string>
    <string name="notify_info">We\'ll notify you whenever new event with criteria below will be added nearby</string>
    <string name="filter_info">Filter events and places nearby using criteria below</string>
    <string name="new_event_channel">New events nearby</string>
    <string name="new_event_notification_title">New event nearby</string>
    <string name="new_event_notification_body">Place: %1$s. Games: %2$s.</string>
    <string name="snackbar_ok">OK</string>
    <string name="no_user_location">To discover places with Boardly go to Filter screen and select a location</string>
    <string name="no_places">No places with board games nearby. Contact us on Facebook to add them and become Boardly partner!</string>
    <string name="call">Call</string>
    <string name="create_event">Create event</string>
    <string name="browse_board_games">Browse board games</string>
    <string name="no_games_in_collection">Sorry, we found no games here</string>
    <string name="games_collection_hint">This is only part of the collection. You\'ll find more games on site.</string>
    <string name="generic_success">Success!</string>
    <string name="game_action_delete">Delete</string>
    <string name="select_game_action">Select action</string>
    <string name="manage_place">Manage place</string>
    <string name="place_name_text">Place name</string>
    <string name="place_description_text">Place description</string>
    <string name="phone_number_text">Phone number</string>
    <string name="page_link_text">Page link (optional)</string>
    <string name="no_partnership_text">You are not a Boardly partner yet. To become one drop us a message on Facebook ;)</string>
    <string name="edit_games_collection">Edit games collection</string>
    <string name="no_link_found">Could not show web page</string>
    <string name="no_more_limit">You exceeded your collection limit</string>
    <string name="add_game_hint">Type name of the game. Remember to be specific!</string>
    <string name="add_game_dialog_positive_text">Add</string>
    <string name="add_game_dialog_negative_text">Cancel</string>
    <string name="add_game_dialog_title">Add game</string>
</resources>
