<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/contentViewGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/infoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notify_info"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/boardGameImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/board_game_placeholder"
                app:civ_border_color="@color/lightGrey"
                app:civ_border_width="1dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/infoTextView" />

            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/location_text_placeholder"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/boardGameTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/boardGameTextView"
                app:layout_constraintTop_toTopOf="@+id/boardGameTextView" />

            <TextView
                android:id="@+id/boardGameTextView"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/game_text_placeholder"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/locationTextView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/boardGameImageView" />

            <Button
                android:id="@+id/pickPlaceButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/pick_place_text"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/pickGameButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/pickGameButton"
                app:layout_constraintTop_toTopOf="@+id/pickGameButton" />

            <Button
                android:id="@+id/pickGameButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/pick_game_text"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toStartOf="@+id/pickPlaceButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/boardGameTextView" />

            <Button
                android:id="@+id/deleteLocationButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/delete_place_text"
                android:textColor="@color/errorRed"
                app:layout_constraintBottom_toBottomOf="@+id/deleteGameButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/deleteGameButton"
                app:layout_constraintTop_toTopOf="@+id/deleteGameButton" />

            <Button
                android:id="@+id/deleteGameButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/delete_game_text"
                android:textColor="@color/errorRed"
                app:layout_constraintEnd_toStartOf="@+id/deleteLocationButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pickGameButton" />

            <TextView
                android:id="@+id/distanceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/max_distance_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deleteGameButton"
                tools:text="Maximum event distance: 5 km" />

            <SeekBar
                android:id="@+id/distanceSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:max="99"
                app:layout_constraintBottom_toTopOf="@+id/deleteNotificationsButton"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/distanceTextView"
                app:layout_constraintVertical_bias="0.0" />

            <com.boardly.customviews.BoardlyButton
                android:id="@+id/applyNotifySettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/blue_background_selector"
                android:text="@string/apply_notify_settings_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <Button
                android:id="@+id/deleteNotificationsButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/delete_notifications_text"
                android:textColor="@color/errorRed"
                app:layout_constraintBottom_toTopOf="@+id/applyNotifySettingsButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>